--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/user.pdf">
+                <img src="images/user.jpeg">
                 <div class="externals">
                     <ul class="contact-links">
                         <li>
