fixed about column bugs

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p><br>I am a Predoc at MIT Sloan focusing on industrial organisation projects under Professors Mert Demirer and Ben Vatter. I consider my interests wide,
+                <p><br>I am a Predoc at MIT Sloan focusing on projects in applied econometrics and industrial organisation under Professors Mert Demirer and Ben Vatter. I consider my interests wide,
                     but they often stem from questions in social scientific methodology and econometric theory.</p>
 
                 <div class="tab-titles">
