--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -27,9 +27,9 @@
         </div>
     </div>
     <div class="page-descr">
-        I borrow the concept of a <span>methodological</span> work from <a href="https://www.jstor.org/stable/48714515">Gilboa et al. (2022).</a>
+        I borrow the concept of a <span>methodological</span> work from <a href="https://www.jstor.org/stable/48714515">Gilboa et al. (2022)</a>.
         Below is a list of works that I think are methodologically <span>interesting</span>. This latter classification is independent 
-        of what I might ultimately think about the works individually. I hope to be consistently updating this list.
+        of what I might ultimately think about the individual works or their methodological contributions. I hope to be consistently updating this list.
     </div>
     <div class="works-container">
         <h1>Articles</h1>
