--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -14,9 +14,9 @@
             <nav>
                 <!-- <img src="images/logo.jpg" class="logo"> -->
                 <ul id="sidemenu">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="projects.html">Research & Projects</a></li>
-                    <li><a href="galleries.html">Galleries</a></li>
+                    <li><a href="../index">Home</a></li>
+                    <li><a href="projects">Research & Projects</a></li>
+                    <li><a href="galleries">Galleries</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
