--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="layer">
                     <h3>All Projects</h3>
                     <p>My current ideas and projects</p>
-                    <a href="pages/projects.html"><i class="fa-solid fa-link"></i></a>
+                    <a href="pages/projects"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
         </div>
@@ -188,13 +188,13 @@
                 <i class="fa-solid fa-book"></i>
                 <h2>Methodology Readings</h2>
                 <p> A list of works that I find methodologically <span>interesting</span></p>
-                <a href="pages/methodology.html">View List</a>
+                <a href="pages/methodology">View List</a>
             </div>
             <div>
                 <i class="fa-solid fa-camera"></i>
                 <h2>Photography</h2>
                 <p></p>
-                <a href="pages/galleries.html">View Galleries</a>
+                <a href="pages/galleries">View Galleries</a>
             </div>
         </div>
     </div>
