--- a/pages/france.html
+++ b/pages/france.html
@@ -25,64 +25,64 @@
     <div class="img-container">
         <div class="gallery">
             <a href="../images/photography/france/france_1.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_1.jpg" alt="france_1">
+                <img src="../images/photography/france/france_1.jpg" alt="">
             </a>
             <a href="images/photography/france/france_2.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_2.jpg" alt="france_1">
+                <img src="../images/photography/france/france_2.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_3.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_3.jpg" alt="france_3">
+                <img src="../images/photography/france/france_3.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_4.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_4.jpg" alt="france_4">
+                <img src="../images/photography/france/france_4.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_5.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_5.jpg" alt="france_5">
+                <img src="../images/photography/france/france_5.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_6.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_6.jpg" alt="france_6">
+                <img src="../images/photography/france/france_6.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_7.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_7.jpg" alt="france_7">
+                <img src="../images/photography/france/france_7.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_8.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_8.jpg" alt="france_8">
+                <img src="../images/photography/france/france_8.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_9.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_9.jpg" alt="france_9">
+                <img src="../images/photography/france/france_9.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_10.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_10.jpg" alt="france_10">
+                <img src="../images/photography/france/france_10.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_11.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_11.jpg" alt="france_11">
+                <img src="../images/photography/france/france_11.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_12.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_12.jpg" alt="france_12">
+                <img src="../images/photography/france/france_12.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_13.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_13.jpg" alt="france_13">
+                <img src="../images/photography/france/france_13.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_14.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_14.jpg" alt="france_14">
+                <img src="../images/photography/france/france_14.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_15.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_15.jpg" alt="france_15">
+                <img src="../images/photography/france/france_15.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_16.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_16.jpg" alt="france_16">
+                <img src="../images/photography/france/france_16.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_17.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_17.jpg" alt="france_17">
+                <img src="../images/photography/france/france_17.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_18.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_18.jpg" alt="france_18">
+                <img src="../images/photography/france/france_18.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_19.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_19.jpg" alt="france_19">
+                <img src="../images/photography/france/france_19.jpg" alt="">
             </a>
             <a href="../images/photography/france/france_20.jpg" data-lightbox="france" data-title="">
-                <img src="../images/photography/france/france_20.jpg" alt="france_20">
+                <img src="../images/photography/france/france_20.jpg" alt="">
             </a>
         </div>
         </div>
