--- a/pages/italy.html
+++ b/pages/italy.html
@@ -25,157 +25,157 @@
     <div class="img-container">
         <div class="gallery">
             <a href="../images/photography/italy/italy_1.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_1.jpg" alt="italy_1">
+                <img src="../images/photography/italy/italy_1.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_2.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_2.jpg" alt="italy_2">
+                <img src="../images/photography/italy/italy_2.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_3.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_3.jpg" alt="italy_3">
+                <img src="../images/photography/italy/italy_3.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_4.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_4.jpg" alt="italy_4">
+                <img src="../images/photography/italy/italy_4.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_5.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_5.jpg" alt="italy_5">
+                <img src="../images/photography/italy/italy_5.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_6.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_6.jpg" alt="italy_6">
+                <img src="../images/photography/italy/italy_6.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_7.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_7.jpg" alt="italy_7">
+                <img src="../images/photography/italy/italy_7.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_8.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_8.jpg" alt="italy_8">
+                <img src="../images/photography/italy/italy_8.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_9.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_9.jpg" alt="italy_9">
+                <img src="../images/photography/italy/italy_9.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_10.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_10.jpg" alt="taly_10">
+                <img src="../images/photography/italy/italy_10.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_11.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_11.jpg" alt="taly_11">
+                <img src="../images/photography/italy/italy_11.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_12.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_12.jpg" alt="taly_12">
+                <img src="../images/photography/italy/italy_12.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_13.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_13.jpg" alt="taly_13">
+                <img src="../images/photography/italy/italy_13.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_14.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_14.jpg" alt="taly_14">
+                <img src="../images/photography/italy/italy_14.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_15.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_15.jpg" alt="taly_15">
+                <img src="../images/photography/italy/italy_15.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_16.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_16.jpg" alt="taly_16">
+                <img src="../images/photography/italy/italy_16.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_17.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_17.jpg" alt="taly_17">
+                <img src="../images/photography/italy/italy_17.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_18.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_18.jpg" alt="taly_18">
+                <img src="../images/photography/italy/italy_18.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_19.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_19.jpg" alt="taly_19">
+                <img src="../images/photography/italy/italy_19.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_20.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_20.jpg" alt="taly_20">
+                <img src="../images/photography/italy/italy_20.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_21.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_21.jpg" alt="taly_21">
+                <img src="../images/photography/italy/italy_21.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_22.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_22.jpg" alt="taly_22">
+                <img src="../images/photography/italy/italy_22.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_23.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_23.jpg" alt="taly_23">
+                <img src="../images/photography/italy/italy_23.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_24.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_24.jpg" alt="taly_24">
+                <img src="../images/photography/italy/italy_24.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_25.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_25.jpg" alt="taly_25">
+                <img src="../images/photography/italy/italy_25.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_26.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_26.jpg" alt="taly_26">
+                <img src="../images/photography/italy/italy_26.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_27.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_27.jpg" alt="taly_27">
+                <img src="../images/photography/italy/italy_27.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_28.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_28.jpg" alt="taly_28">
+                <img src="../images/photography/italy/italy_28.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_29.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_29.jpg" alt="taly_29">
+                <img src="../images/photography/italy/italy_29.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_30.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_30.jpg" alt="taly_30">
+                <img src="../images/photography/italy/italy_30.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_31.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_31.jpg" alt="taly_31">
+                <img src="../images/photography/italy/italy_31.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_32.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_32.jpg" alt="taly_32">
+                <img src="../images/photography/italy/italy_32.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_33.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_33.jpg" alt="taly_33">
+                <img src="../images/photography/italy/italy_33.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_34.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_34.jpg" alt="taly_34">
+                <img src="../images/photography/italy/italy_34.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_35.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_35.jpg" alt="taly_35">
+                <img src="../images/photography/italy/italy_35.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_36.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_36.jpg" alt="taly_36">
+                <img src="../images/photography/italy/italy_36.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_37.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_37.jpg" alt="taly_37">
+                <img src="../images/photography/italy/italy_37.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_38.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_38.jpg" alt="taly_38">
+                <img src="../images/photography/italy/italy_38.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_39.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_39.jpg" alt="taly_39">
+                <img src="../images/photography/italy/italy_39.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_40.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_40.jpg" alt="taly_40">
+                <img src="../images/photography/italy/italy_40.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_41.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_41.jpg" alt="taly_41">
+                <img src="../images/photography/italy/italy_41.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_42.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_42.jpg" alt="taly_42">
+                <img src="../images/photography/italy/italy_42.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_43.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_43.jpg" alt="taly_43">
+                <img src="../images/photography/italy/italy_43.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_44.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_44.jpg" alt="taly_44">
+                <img src="../images/photography/italy/italy_44.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_45.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_45.jpg" alt="taly_45">
+                <img src="../images/photography/italy/italy_45.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_46.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_46.jpg" alt="taly_46">
+                <img src="../images/photography/italy/italy_46.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_47.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_47.jpg" alt="taly_47">
+                <img src="../images/photography/italy/italy_47.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_48.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_48.jpg" alt="italy_48">
+                <img src="../images/photography/italy/italy_48.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_49.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_49.jpg" alt="taly_49">
+                <img src="../images/photography/italy/italy_49.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_50.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_50.jpg" alt="taly_50">
+                <img src="../images/photography/italy/italy_50.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_51.jpg" data-lightbox="italy" data-title="">
-                <img src="../images/photography/italy/italy_51.jpg" alt="taly_51">
+                <img src="../images/photography/italy/italy_51.jpg" alt="">
             </a>
         </div>
         </div>
