removed all externsions

--- a/pages/galleries.html
+++ b/pages/galleries.html
@@ -13,9 +13,9 @@
             <nav>
                 <!-- <img src="images/logo.jpg" class="logo"> -->
                 <ul id="sidemenu">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="projects.html">Research & Projects</a></li>
-                    <li><a href="methodology.html">Methodology Readings</a></li>
+                    <li><a href="../index">Home</a></li>
+                    <li><a href="projects">Research & Projects</a></li>
+                    <li><a href="methodology">Methodology Readings</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -37,7 +37,7 @@
                     <div class="layer">
                         <h3>Italy</h3>
                         <p>Description</p>
-                        <a href="italy.html"><i class="fa-solid fa-link"></i></a>
+                        <a href="italy"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -45,7 +45,7 @@
                     <div class="layer">
                         <h3>France</h3>
                         <p>Description</p>
-                        <a href="france.html"><i class="fa-solid fa-link"></i></a>
+                        <a href="france"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -53,7 +53,7 @@
                     <div class="layer">
                         <h3>United States</h3>
                         <p>Description</p>
-                        <a href="usa.html"><i class="fa-solid fa-link"></i></a>
+                        <a href="usa"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
             </div>
