--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="swiper-slide"><img src="images/slideshow/cdf_10.png" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_1.jpeg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_4.jpeg" alt=""></div>
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_8.jpeg" alt=""></div>
+                    <!-- <div class="swiper-slide"><img src="images/slideshow/cdf_8.jpeg" alt=""></div> -->
                     <div class="swiper-slide"><img src="images/slideshow/cdf_3.jpeg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_5.jpeg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_7.jpeg" alt=""></div>
