--- a/pages/projects.html
+++ b/pages/projects.html
@@ -43,11 +43,11 @@
                             I argue that in the social sciences, the effect of a theory becoming 
                             known by the agents it purports to describe amounts to a problem of 
                             selection- not on the data which one might test the theory against,
-                            but the the process which would generate any possible data. Under
+                            but the process governing the generation any possible data. Under
                             this interpretation, it becomes unclear when one should regard a 
                             social or economic theory as <span>testable</span>. I propose a 
-                            criterion for classification of testable social and economic theories
-                            as an extension of Karl Poppers answer to the <span> Problem of Demarcation</span>
+                            criterion for classifying testable social and economic theories
+                            as an extension of Karl Poppers answer to the <span> Problem of Demarcation.</span>
                         </p></li>
                 <li class="project-title-link">
                     <a href="https://drive.google.com/file/d/1_rRIIkDGIBbMW2dig3_PMMtTGtlfrNfm/view?usp=sharing">
@@ -56,8 +56,8 @@
                             The paucity of numerical data need not result in scholars implementing
                             <span>ad hoc</span> empirical methods in their study of ancient economies. 
                             Using the method of <span> partial identification</span>, I give an example 
-                            of how regression analysis can be implemented in the study of ancient economies, 
-                            and that this method allows scholars to explicitly demonstrate the effect 
+                            of how regression analysis may be implemented in the study of ancient economies, 
+                            and show that this method allows scholars to explicitly demonstrate the effect 
                             on their conclusions of their assumptions regarding the representativeness 
                             of archeological evidence.  
                         </p></li>
@@ -65,9 +65,9 @@
                 <a href="#">
                     Algorithms for Predicting the Outcomes of Over-Under Wagers</a>
                     <p>
-                        <span>(website coming soon)</span> A.J. Hesby and I will be developing a code base for fine-tuning 
-                        predictive models of Over-Under wagers. We are working on developing a website containing full
-                        coding documentation and comprehensive discussion on the contruction and implementation of our 
+                        <span>(website coming soon)</span> A.J. Hesby and I are developing a code base for fine-tuning 
+                        predictive models of Over-Under wagers. We are also working on developing a website containing full
+                        code documentation and comprehensive discussions on the contruction and implementation of our 
                         models. 
                     </p></li>
             </ul>
@@ -92,16 +92,16 @@
                             The direct effect of minimum wage policy on poverty and unemployment is controversial both 
                             theoretically and empirically. I study whether minimum wage policy influences
                             the structure of wages in the immediate neighborhood of a newly establsihed wage floor. 
-                            Changes in this structure around the minimum are likely to influence the propsective earnings 
-                            of workers who were working at or near the new minium once it is established, and hence any 
-                            localized effect on these wages via minium wage policy is likley to affect labor market outcomes 
-                            indirectly. 
+                            Once a new policy is established, changes in the structure around the new minimum are likely 
+                            to influence the propsective earnings of workers who were working at or near this wage level. 
+                            Hence, minium wage policy has indirect effects on unemployment and poverty if it affects the 
+                            wage structure locally.  
                         </p></li>
                 <li class="project-title-link">
                     Partial Identification in Risk Management
                         <p>
                             Many models of risk management utilize distributional assumptions on the risk associated with 
-                            porfolios. In particularly, FHVaR utilizes assumptions on the stability of the distribution of 
+                            porfolios. In particularl, FHVaR utilizes assumptions on the stability of the distribution of 
                             returns over time. When these assumptions are relaxed, the VaR and resulting level of 
                             margin to be allocated becomes uncertain. However, the determination of margin by risk managers
                             based on an uncertain calculation of the FHVaR may actually benefit trading firms in the long run 
