--- a/pages/france.html
+++ b/pages/france.html
@@ -12,7 +12,7 @@
             <nav>
                 <!-- <img src="images/logo.jpg" class="logo"> -->
                 <ul id="sidemenu">
-                    <li><a href="index">Home</a></li>
+                    <li><a href="../index">Home</a></li>
                     <li><a href="galleries">Galleries</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
