--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/abanks17">
+                            <a href="https://github.com/aaronbanks17">
                                 <i class="fa-brands fa-github"></i>
                             </a>
                         </li>
@@ -153,7 +153,7 @@
                 <img src="images/papers/demarcation.png">
                 <div class="layer">
                     <h3>Demarcation</h3>
-                    <p>My senior thesis which discusses a criterion for classifying economic theories are testable</p>
+                    <p>My senior thesis which discusses a criterion for classifying economic theories as testable</p>
                     <a href="https://drive.google.com/file/d/1J-HLnurkB4ZEhGcBv_Lhzu1f6YTArejz/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                 <img src="images/papers/slave_prices.png">
                 <div class="layer">
                     <h3>What was the Price of Slaves in Ancient Rome?</h3>
-                    <p>An example of how regression analysis may be leverged when using archeological data</p>
+                    <p>Regression analysis for ancient economic data</p>
                     <a href="https://drive.google.com/file/d/1_rRIIkDGIBbMW2dig3_PMMtTGtlfrNfm/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                 <img src="images/papers/other.png">
                 <div class="layer">
                     <h3>All Projects</h3>
-                    <p>My current ideas and projects</p>
+                    <p>Current ideas and projects</p>
                     <a href="pages/projects"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
