--- a/pages/projects.html
+++ b/pages/projects.html
@@ -94,7 +94,7 @@
                             the structure of wages in the immediate neighborhood of a newly establsihed wage floor. 
                             Once a new policy is established, changes in the structure around the new minimum are likely 
                             to influence the propsective earnings of workers who were working at or near this wage level. 
-                            Hence, minium wage policy has indirect effects on unemployment and poverty if it affects the 
+                            Hence, minium wage policy may have indirect effects on unemployment and poverty if it affects the 
                             wage structure locally.  
                         </p></li>
                 <li class="project-title-link">
