--- a/pages/projects.html
+++ b/pages/projects.html
@@ -67,7 +67,7 @@
                     <p>
                         <span>(website coming soon)</span> A.J. Hesby and I are developing a code base for fine-tuning 
                         predictive models of Over-Under wagers. We are also working on developing a website containing full
-                        code documentation and comprehensive discussions on the contruction and implementation of our 
+                        code documentation and comprehensive discussions on the construction and implementation of our 
                         models. 
                     </p></li>
             </ul>
