--- a/pages/projects.html
+++ b/pages/projects.html
@@ -101,7 +101,7 @@
                     Partial Identification in Risk Management
                         <p>
                             Many models of risk management utilize distributional assumptions on the risk associated with 
-                            porfolios. In particularl, FHVaR utilizes assumptions on the stability of the distribution of 
+                            porfolios. In particular, FHVaR utilizes assumptions on the stability of the distribution of 
                             returns over time. When these assumptions are relaxed, the VaR and resulting level of 
                             margin to be allocated becomes uncertain. However, the determination of margin by risk managers
                             based on an uncertain calculation of the FHVaR may actually benefit trading firms in the long run 
