yet anotehr typo

--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -64,7 +64,7 @@
                 <li class="title-book">Statistical Decision Functions<span> by Abraham Wald</span></li>
                 <li class="title-book">Statistical Decision Theory<span> by James O. Berger</span></li>
                 <li class="title-book">Identification for Prediction and Decision<span> by Charles F. Manski</span></li>
-                <li class="title-book">Theory of Decision Under Uncertainty<span> by Itzahk Gilboa</span></li>
+                <li class="title-book">Theory of Decision Under Uncertainty<span> by Itzhak Gilboa</span></li>
                 <li class="title-book">Robustness<span> by Lars Peter Hansen and Thomas J. Sargent </span></li>
 
             </ul>
