--- a/pages/projects.html
+++ b/pages/projects.html
@@ -43,7 +43,7 @@
                             I argue that in the social sciences, the effect of a theory becoming 
                             known by the agents it purports to describe amounts to a problem of 
                             selection- not on the data which one might test the theory against,
-                            but the process governing the generation any possible data. Under
+                            but on the process governing the generation any possible data. Under
                             this interpretation, it becomes unclear when one should regard a 
                             social or economic theory as <span>testable</span>. I propose a 
                             criterion for classifying testable social and economic theories
