--- a/pages/france.html
+++ b/pages/france.html
@@ -72,9 +72,9 @@
             <a href="../images/photography/france/france_16.jpg" data-lightbox="france" data-title="">
                 <img src="../images/photography/france/france_16.jpg" alt="">
             </a>
-            <a href="../images/photography/france/france_17.jpg" data-lightbox="france" data-title="">
+            <!-- <a href="../images/photography/france/france_17.jpg" data-lightbox="france" data-title="">
                 <img src="../images/photography/france/france_17.jpg" alt="">
-            </a>
+            </a> -->
             <a href="../images/photography/france/france_18.jpg" data-lightbox="france" data-title="">
                 <img src="../images/photography/france/france_18.jpg" alt="">
             </a>
