--- a/pages/usa.html
+++ b/pages/usa.html
@@ -66,9 +66,9 @@
             <a href="../images/photography/usa/usa_14.jpg" data-lightbox="usa" data-title="">
                 <img src="../images/photography/usa/usa_14.jpg">
             </a>
-            <a href="../images/photography/usa/usa_15.jpg" data-lightbox="usa" data-title="">
+            <!-- <a href="../images/photography/usa/usa_15.jpg" data-lightbox="usa" data-title="">
                 <img src="../images/photography/usa/usa_15.jpg">
-            </a>
+            </a> -->
             <a href="../images/photography/usa/usa_16.jpg" data-lightbox="usa" data-title="">
                 <img src="../images/photography/usa/usa_16.jpg">
             </a>
@@ -108,9 +108,9 @@
             <a href="../images/photography/usa/usa_28.jpg" data-lightbox="usa" data-title="">
                 <img src="../images/photography/usa/usa_28.jpg">
             </a>
-            <a href="../images/photography/usa/usa_29.jpg" data-lightbox="usa" data-title="">
+            <!-- <a href="../images/photography/usa/usa_29.jpg" data-lightbox="usa" data-title="">
                 <img src="../images/photography/usa/usa_29.jpg">
-            </a>
+            </a> -->
             <a href="../images/photography/usa/usa_30.jpg" data-lightbox="usa" data-title="">
                 <img src="../images/photography/usa/usa_30.jpg">
             </a>
