--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="slideshow-container">
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_10.png" alt=""></div>
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_1.jpeg" alt=""></div>
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_4.jpeg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_10.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_1.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_4.jpg" alt=""></div>
                     <!-- <div class="swiper-slide"><img src="images/slideshow/cdf_8.jpeg" alt=""></div> -->
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_3.jpeg" alt=""></div>
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_5.jpeg" alt=""></div>
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_7.jpeg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_3.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_5.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_7.jpg" alt=""></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
