--- a/pages/italy.html
+++ b/pages/italy.html
@@ -69,7 +69,7 @@
             <a href="../images/photography/italy/italy_15.jpg" data-lightbox="italy" data-title="">
                 <img src="../images/photography/italy/italy_15.jpg" alt="">
             </a>
-            <a href="../images/photography/italy/italy_16.jpg" data-lightbox="italy" data-title="">
+            <!-- <a href="../images/photography/italy/italy_16.jpg" data-lightbox="italy" data-title="">
                 <img src="../images/photography/italy/italy_16.jpg" alt="">
             </a>
             <a href="../images/photography/italy/italy_17.jpg" data-lightbox="italy" data-title="">
@@ -86,7 +86,7 @@
             </a>
             <a href="../images/photography/italy/italy_21.jpg" data-lightbox="italy" data-title="">
                 <img src="../images/photography/italy/italy_21.jpg" alt="">
-            </a>
+            </a> -->
             <a href="../images/photography/italy/italy_22.jpg" data-lightbox="italy" data-title="">
                 <img src="../images/photography/italy/italy_22.jpg" alt="">
             </a>
