--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -39,6 +39,9 @@
                         The Use of Knowledge in Society</a><span> by Friedrich Hayek</span></li>
                  <li class="title-article"><a href="https://www.jstor.org/stable/1826045">
                             The Utility Analysis of Choices Involving Risk</a><span> by Milton Friedman & Leonard J. Savage</span></li>
+                <li class="title-article">
+                    <a href="https://www.jstor.org/stable/1827159">
+                        Uncertainty, Evolution, and Economic Theory</a><span> by Armen A. Alchian</span></li>
                 <li class="title-article"><a href="https://www.jstor.org/stable/1828886">
                     A Difficulty in the Concept of Social Welfare</a><span> by Kenneth J. Arrow</span></li>
                 <li class="title-article"><a href="https://www.jstor.org/stable/2745982">
@@ -47,6 +50,9 @@
                     The Predictability of Social Events</a><span> by Emilie Grunberg & Franco Modigliani</span></li>
                 <li class="title-article"><a href="https://www.wiwiss.fu-berlin.de/fachbereich/bwl/pruefungs-steuerlehre/loeffler/Lehre/bachelor/investition/Friedman_the_methology_of_positive_economics.pdf">
                             The Methodology of Positive Economics</a><span> by Milton Freidman</span></li>
+                <li class="title-article">
+                    <a href="https://www.journals.uchicago.edu/doi/abs/10.1086/258584">
+                        Irrational Behavior and Economic Theory</a><span> by Gary S. Becker</span></li>        
                 <li class="title-article">
                     <a href="https://www.jstor.org/stable/pdf/2298123.pdf">
                         Identification of Endogenous Social Effects: The Reflection Problem</a><span> by Charles F. Manski</span></li>
