hiding galleries page

--- a/pages/galleries.html
+++ b/pages/galleries.html
@@ -25,7 +25,12 @@
             </div>
         </div>
     </div>
+
     <div class="page-descr">
+        Under construction.
+    </div>
+
+    <!-- <div class="page-descr">
         I like to try out photography in my free time, and below I have divided a sample of photos
         into the countries where they were taken. 
     </div>
@@ -59,7 +64,7 @@
             </div>
             <!-- <a href="#">See More</a> -->
         </div>
-    </div>
+    </div> -->
 
     <script>
 
