--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p><br>I am a Predoc at MIT Sloan focusing on projects in applied econometrics and industrial organisation under Professors Mert Demirer and Ben Vatter. I consider my interests wide,
-                    but they often stem from questions in social scientific methodology and econometric theory.</p>
+                <p><br>I am a Predoc at MIT Sloan focusing on projects in industrial organisation under Professors Mert Demirer and Ben Vatter.</p>
 
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('Education')">Education</p>
@@ -116,6 +115,8 @@
                     <ul>
                         <li><span>Python</span><br>
                             <span class="tab-subitem">Econometric Modelling/Estimation,<br>Data Processing/Visualization, Optimization,<br>Webscrapping</span></li>
+                        <li><span>R</span><br>
+                            <span class="tab-subitem">Data Processing/Visualization, Estimation</span></li>
                         <li><span>Stata</span><br>
                             <span class="tab-subitem">Data Processing/Visualization, Estimation</span></li>
                         <li><span>LaTex</span><br>
